# Out-of-band_Deployment_Monitor

./: .gitignore  CMakeLists.txt  Knowledge.md  README.md
agent/: CMakeLists.txt
agent/src/: main.cpp
agent/src/config/: AgentConfig.cpp  AgentConfig.h
agent/src/core/: Agent.cpp  Agent.h
agent/src/proc/: ProcHelper.cpp  ProcHelper.h
agent/src/reporter/: EventReporter.cpp  EventReporter.h  IEventReporter.h
agent/src/watcher/: EbpfWatcher.cpp  EbpfWatcher.h  IFileWatcher.h  InotifyWatcher.cpp  InotifyWatcher.h
ansible/: deploy-webapp.yml  inventory.example.ini
central-service/: CMakeLists.txt
central-service/src/: main.cpp
central-service/src/config/: CentralConfig.cpp  CentralConfig.h
central-service/src/core/: AuditLogger.cpp  AuditLogger.h  CentralService.cpp  CentralService.h
central-service/src/decision/: DecisionEngine.cpp  DecisionEngine.h
central-service/src/elasticsearch/: ElasticsearchClient.cpp  ElasticsearchClient.h
central-service/src/jenkins/: HttpJenkinsClient.cpp  HttpJenkinsClient.h  IJenkinsClient.h  MockJenkinsClient.cpp  MockJenkinsClient.h
central-service/src/notification/: INotifier.h  SmtpNotifier.cpp  SmtpNotifier.h
central-service/src/remediation/: AnsibleTrigger.cpp  AnsibleTrigger.h  JenkinsRemediator.cpp  JenkinsRemediator.h
central-service/src/window/: DeployWindowManager.cpp  DeployWindowManager.h
deploy/: install-agent.sh  install-central.sh  install.sh  make-deb-agent.sh  make-deb-central.sh  oob-agent.service  oob-central.service
deploy/logrotate.d/: oob-audit
docs/: api-contract.md  architecture.md  demo-guide.md  demo-scenario.md  problem-statement.md  requirements.md  test-scenarios.md
mock/: Jenkinsfile  agent-config.json  central-config.json.example  jenkins-state.json
mock/ansible/: inventory  remediate.yml
scripts/: measure-latency.sh  measure-resources.sh  start-demo.sh  stop-demo.sh  stress-file-writes.sh  test-disconnect.sh
shared/: CMakeLists.txt  FileEvent.h
